# ------------------------------------------------------------------------------
# Copyright 2018 Uwe Arzt, mail@uwe-arzt.de
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and 
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "knx_examples_rs"
version = "0.0.2"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "Examples for KNX Library"

repository = "https://github.com/uwearzt/knx_examples_rs"
readme = "README.md"

categories = ["network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "Apache-2.0"

[dependencies]
#knx_rs = { path="../knx_rs" }
knx_rs = "0.0.2"
#knx_ets_rs = { path="../knx_ets_rs" }
knx_ets_rs = "0.0.2"

serial = "0.4"
clap = "2.32.0"
log4rs ="0.8.0"
